tests/should-not-compile/null-real.talc
// EXPECTED ERROR: variable "r" has an initializer of type null
r:real = null;
